--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^2.2.0",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.4.0"
   },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.9.0",
+    "gh-pages": "^2.2.0",
+    "prettier": "^1.19.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prodBuild": "react-scripts build -- --mode production --env.prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": ["prettier"],
+    "rules": {
+      "prettier/prettier": "error"
+    }
   },
   "browserslist": {
     "production": [
@@ -44,5 +54,5 @@
   "bugs": {
     "url": "https://github.com/alundiak/drinks/issues"
   },
-  "homepage": "https://github.com/alundiak/drinks#readme"
+  "homepage": "https://alundiak.github.io/drinks"
 }
