--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Drinks",
-  "name": "Collection of Drinks, Cocktails, shots, etc.",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
