--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Project Related
-build
+#
+# Part from NodeJS-based file from GitHub
+#
 
 # Logs
 logs
@@ -105,3 +106,26 @@ dist
 
 # TernJS port file
 .tern-port
+
+#
+# Part from CRA
+#
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
