Important to have homepage in package.json for proper GitHub Pages re-depolyment/PATH settings.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Drinks collection or Drinker (derived from Tinder)",
   "private": true,
+  "homepage": "https://alundiak.github.io/drinks",
   "dependencies": {
     "@sandstreamdev/react-swipeable-list": "^1.0.1",
     "nuka-carousel": "^4.7.7",
