--- a/.github/workflows/node_and_yarn.yml
+++ b/.github/workflows/node_and_yarn.yml
@@ -15,7 +15,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x]
+        # 16.x, can work OK, and no --openssl-legacy-provider  needed. It's starting from NodeJS v17 flag needed (so far)
+        node-version: [17.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
