--- a/package.json
+++ b/package.json
@@ -3,24 +3,6 @@
   "version": "1.0.0",
   "description": "Drinks collection or Drinker (derived from Tinder)",
   "private": true,
-  "dependencies": {
-    "@sandstreamdev/react-swipeable-list": "^1.0.1",
-    "nuka-carousel": "^4.7.7",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-spring": "^9.1.2",
-    "react-with-gesture": "^4.0.8",
-    "reactstrap": "^8.9.0",
-    "web-vitals": "^1.0.1"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.1.6",
-    "gh-pages": "^3.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build",
@@ -28,6 +10,28 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "dependencies": {
+    "@react-spring/web": "^9.7.1",
+    "@sandstreamdev/react-swipeable-list": "^1.0.2",
+    "@use-gesture/react": "^10.2.24",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
+    "nuka-carousel": "^5.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "react-with-gesture": "^4.0.8",
+    "reactstrap": "^9.1.6",
+    "styled-components": "^5.3.9",
+    "web-vitals": "^3.3.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "gh-pages": "^5.0.0",
+    "react-scripts": "5.0.1"
   },
   "eslintConfig": {
     "extends": [
