--- a/.github/workflows/node_and_yarn.yml
+++ b/.github/workflows/node_and_yarn.yml
@@ -1,7 +1,7 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js with yarn CI
+name: Node.js CI
 
 on:
   push:
@@ -15,16 +15,16 @@ jobs:
 
     strategy:
       matrix:
-        # 16.x, can work OK, and no --openssl-legacy-provider  needed. It's starting from NodeJS v17 flag needed (so far)
+        # 16.x, can work OK, and no --openssl-legacy-provider needed. It's starting from NodeJS v17 flag needed (so far)
         node-version: [18.x, 19.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: npm ci
     - run: npm run build
     - run: npm test
